Fixed the top spacing

--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@
       padding: 10px;
       margin: 10% auto;
       position: absolute;
-      top: 40%;
+      /* top: 40%; */
       left: 0;
       right: 0;
   }
